--- a/src/components/currency/Result.css
+++ b/src/components/currency/Result.css
@@ -1,6 +1,7 @@
 .result-box {
   background-color: rgba(255, 255, 255, 0.344);
-  font-weight: 6 00;
+  /* font-weight: 600; */
+  width: 90%;
 }
 * {
   font-family: "Montesarret";
