--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,9 @@ code {
 #root {
   height: 100vh;
   width: 100%;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
   position: relative;
   color: white;
+  overflow: scroll;
 }
 @font-face {
   font-family: "Montesarret";
